sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:9: error: '(' expected but identifier found.
        if isSmaller(j-1, j){
           ^AlgGnomeSort:15: error: illegal start of simple expression
      }
      ^